<resources>
    <string name="app_name">StockInfo</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="preferences_title">Update Settings</string>
    <string name="refresh_frequency">Refresh frequency</string>
    <string name="minimum_percent_change">Percent Change to Highlight</string>
    <string name="color_choice">Highlight Color</string>
    <string name="select_color">Select Color</string>
    <string name="red">red</string>

    <string name="black">black</string>

    <string name="percent_change">% Change</string>
    <string name="auto_refresh">Auto refresh</string>
    <string name="auto_refresh_summary">Select to turn on automatic updating</string>
    <string name="queryBase">http://query.yahooapis.com/v1/public/yql</string>
    <string name="expandedText">Click to open app</string>
    <string name="expandedTitle">Stock Price Alert!</string>

    <string name="action_refresh">Refresh</string>

    <string-array name="update_freq_options">
        <item>Every Minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>Every Hour</item>
    </string-array>

    <string-array name="percent_change_options">
        <item>.01%</item>
        <item>1%</item>
        <item>2%</item>
        <item>3%</item>
        <item>5%</item>
        <item>10%</item>
        <item>-.01%</item>
        <item>-1%</item>
        <item>-2%</item>
        <item>-5%</item>
        <item>-10%</item>
    </string-array>

    <string-array name="percent_change">
        <item>+.01%</item>
        <item>+1.00%</item>
        <item>+2.00%</item>
        <item>+3.00%</item>
        <item>+5.00%</item>
        <item>+10.00%</item>
        <item>-.01%</item>
        <item>-1.00%</item>
        <item>-2.00%</item>
        <item>-5.00%</item>
        <item>-10.00%</item>
    </string-array>

    <string-array name="color_options">
        <item>black</item>
        <item>red</item>
        <item>green</item>

        <item>blue</item>


    </string-array>

    <string-array name="color_val">
        <item>black</item>
        <item>red</item>
        <item>green</item>

        <item>blue</item>



    </string-array>

    <string-array name="update_freq_values">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>60</item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
