<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="PREF_MIN_PERCENT_CHANGE"
        android:title="@string/minimum_percent_change"
        android:summary="%s"
        android:entries="@array/percent_change_options"
        android:entryValues="@array/percent_change"
        android:dialogTitle="@string/percent_change"
        android:defaultValue="3"
        />

    <ListPreference
        android:key="PREF_COLOR_CHOICE"
        android:title="@string/color_choice"
        android:summary="%s"
        android:entries="@array/color_options"
        android:entryValues="@array/color_val"
        android:dialogTitle="@string/select_color"
        android:defaultValue="@string/black"
        />

    <PreferenceCategory
        android:title="@string/preferences_title">


    <CheckBoxPreference
        android:key="PREF_AUTO_UPDATE"
        android:title="@string/auto_refresh"
        android:summary="@string/auto_refresh_summary"
        android:defaultValue="true"
        />


        <ListPreference
            android:key="PREF_UPDATE_FREQ"
            android:title="@string/refresh_frequency"
            android:summary="%s"
            android:entries="@array/update_freq_options"
            android:entryValues="@array/update_freq_values"
            android:dialogTitle="@string/refresh_frequency"
            android:defaultValue="60"
            />

    </PreferenceCategory>

</PreferenceScreen>